--- a/modules/22/3/style.css
+++ b/modules/22/3/style.css
@@ -1,6 +1,6 @@
-.module-box-short .author-head {
+.module-box-short-mod-22-3 .author-head {
 	padding-bottom: 15px;
 }
-.module-box-short img {
+.module-box-short-mod-22-3 img {
 	border-radius: 100px;
 }
