--- a/modules/22/2/style.css
+++ b/modules/22/2/style.css
@@ -1,13 +1,13 @@
-.module-box {
+.module-box-mod-22-2 {
 	border: 1px solid article_color_h;
 	padding: 15px;
 }
-.module-box .author-head {
+.module-box-mod-22-2 .author-head {
 	padding-bottom: 15px;
 }
-.module-box .author-image {
+.module-box-mod-22-2 .author-image {
 	text-align: center;
 }
-.module-box img {
+.module-box-mod-22-2 img {
 	border-radius: 100px;
 }
